# tower-rpc

./: .tokeignore  Cargo.toml  README.md
benches/: ipc.rs  rpc.rs
examples/: bytes_client.rs  bytes_server.rs  channel.rs  example.rs  http.rs  http_over_ipc.rs  ipc_client.rs  ipc_multiplex_client.rs  ipc_multiplex_server.rs  ipc_server.rs  local.rs  multiplex_ipc.rs  pipeline_ipc.rs  pipeline_local.rs  reconnect_client.rs  request_loop.rs  routing.rs  simple.rs  stdio.rs  stdio_client.rs  stdio_server.rs  tcp.rs  tcp_client.rs  tcp_server.rs  tracing.rs
src/: client.rs  codec.rs  codec_builder.rs  codec_wrapper.rs  ipc_client_stream.rs  ipc_request_handler.rs  ipc_service.rs  lib.rs  request.rs  request_handler.rs  router.rs  rpc_service.rs  server.rs  tagged.rs
src/client/: mod.rs  multiplex.rs
src/codec/: builder.rs  mod.rs  serde.rs  serializer.rs
src/ipc/: ipc_client_stream.rs  mod.rs
src/server/: http.rs  mod.rs  multiplex.rs
src/service/: demultiplex.rs  mod.rs  multiplex.rs  request.rs
src/transport/: codec.rs  ipc.rs  local.rs  mod.rs  stdio.rs  tcp.rs
src/transport/ipc/: client_stream.rs  mod.rs  transport.rs
