[package]
edition = "2021"
name = "tower-rpc"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "135e57f8fc812337e83570f839796cd5d6c9018e" }
bytes = "1"
futures = "0.3"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d" }
matchit = { version = "0.7.0", optional = true }
parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "b5544c93df7cf801b3bee22c03a306e392c6c031", optional = true }
pin-project = "1"
serde = { version = "1", features = ["derive"], optional = true }
slab = { version = "0.4", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-serde = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tower = "0.7.0-rc4"
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["make", "util"] }
tracing = "0.1"
hyper = { version = "=1.0.0-rc.3", features = ["full"], optional = true }
http = { version = "0.2", optional = true }
http-body-util = { version = "=0.1.0-rc.2", optional = true }
eyre = "0.6"

[dev-dependencies]
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "135e57f8fc812337e83570f839796cd5d6c9018e", features = [
    "signal",
] }
tower-http = { git = "https://github.com/tower-rs/tower-http", branch = "http-body-1.0", features = [
    "trace",
] }
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
http-serde = "1.1.2"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "net",
] }
tower = { version = "0.4.13", features = [
    "make",
    "util",
    "buffer",
    "steer",
    "reconnect",
] }
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.4"

[features]
all = [
    "bincode",
    "cbor",
    "client",
    "ipc",
    "json",
    "messagepack",
    "multiplex",
    "router",
    "serde-codec",
    "server",
    "stdio",
    "tcp",
    "local",
    "http",
]
http = ["dep:http", "router", "http-body-util", "hyper"]
bincode = ["serde-codec", "tokio-serde/bincode"]
cbor = ["serde-codec", "tokio-serde/cbor"]
client = []
default = []
ipc = ["parity-tokio-ipc"]
json = ["serde-codec", "tokio-serde/json"]
local = []
messagepack = ["serde-codec", "tokio-serde/messagepack"]
multiplex = ["slab"]
router = ["matchit"]
serde-codec = ["serde", "tokio-serde"]
server = []
stdio = ["tokio/process"]
tcp = ["tokio/net"]

[[example]]
name = "bytes_client"
required-features = ["ipc", "client"]

[[example]]
name = "bytes_server"
required-features = ["ipc", "server"]

[[example]]
name = "channel"
required-features = ["local", "client", "server"]

[[example]]
name = "ipc_client"
required-features = ["ipc", "client", "bincode"]

[[example]]
name = "ipc_server"
required-features = ["ipc", "server", "bincode"]

[[example]]
name = "ipc_multiplex_client"
required-features = ["ipc", "client", "multiplex", "bincode"]

[[example]]
name = "ipc_multiplex_server"
required-features = ["ipc", "server", "multiplex", "bincode"]

[[example]]
name = "local"
required-features = ["local", "client", "server"]

[[example]]
name = "reconnect_client"
required-features = ["tcp", "client", "bincode"]

[[example]]
name = "request_loop"
required-features = ["local", "client", "server"]

[[example]]
name = "routing"
required-features = ["local", "client", "server", "router"]

[[example]]
name = "http_over_ipc"
required-features = ["ipc", "client", "server", "router", "bincode"]

[[example]]
name = "simple"
required-features = ["local", "client", "server"]

[[example]]
name = "stdio_client"
required-features = ["stdio", "client"]

[[example]]
name = "stdio_server"
required-features = ["stdio", "server"]

[[example]]
name = "tcp_client"
required-features = ["tcp", "client"]

[[example]]
name = "tcp_server"
required-features = ["tcp", "server"]

[[example]]
name = "tracing"
required-features = ["local", "client", "server"]

[[example]]
name = "http"
required-features = ["http", "tcp", "server", "serde-codec", "json"]

[[bench]]
harness = false
name = "rpc"
required-features = ["all"]
