[package]
edition = "2021"
name = "tower-rpc"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "36a793502ee51e3208b1dde6fcf9e77b4889397d" }
bytes = "1"
futures = "0.3"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
matchit = { version = "0.7", optional = true }
parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "588198a0abb32a79f6f3e656ff0472008e4ba9b8", optional = true }
pin-project = "1"
serde = { version = "1", features = ["derive"], optional = true }
slab = { version = "0.4", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-serde = { version = "0.8", optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tower = "0.7.0-rc4"
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["make", "util"] }
tracing = "0.1"
hyper = { version = "1.0.1", features = ["full"], optional = true }
hyper-util = { version = "0.1.1", features = [
    "tokio",
    "server-auto",
], optional = true }
http = { version = "1.0.0", optional = true }
http-body-util = { version = "0.1.0", optional = true }
eyre = "0.6"

[dev-dependencies]
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "36a793502ee51e3208b1dde6fcf9e77b4889397d", features = [
    "signal",
] }
tower-http = { version = "0.5", features = ["trace"] }
http = "1.0.0"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
http-serde = { git = "https://gitlab.com/aschey/http-serde", rev = "78fb8aa8" }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.34.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "net",
] }
tower = { version = "0.4.13", features = [
    "make",
    "util",
    "buffer",
    "steer",
    "reconnect",
] }
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"

[features]
all = [
    "bincode",
    "cbor",
    "client",
    "ipc",
    "json",
    "messagepack",
    "multiplex",
    "router",
    "serde-codec",
    "server",
    "stdio",
    "tcp",
    "local",
    "http",
]
http = ["dep:http", "router", "http-body-util", "hyper", "hyper-util"]
bincode = ["serde-codec", "tokio-serde/bincode"]
cbor = ["serde-codec", "tokio-serde/cbor"]
client = []
default = []
ipc = ["parity-tokio-ipc"]
json = ["serde-codec", "tokio-serde/json"]
local = []
messagepack = ["serde-codec", "tokio-serde/messagepack"]
multiplex = ["slab"]
router = ["matchit"]
serde-codec = ["serde", "tokio-serde"]
server = []
stdio = ["tokio/process"]
tcp = ["tokio/net"]

[[example]]
name = "bytes_client"
required-features = ["ipc", "client"]

[[example]]
name = "bytes_server"
required-features = ["ipc", "server"]

[[example]]
name = "channel"
required-features = ["local", "client", "server"]

[[example]]
name = "ipc_client"
required-features = ["ipc", "client", "bincode"]

[[example]]
name = "ipc_server"
required-features = ["ipc", "server", "bincode"]

[[example]]
name = "ipc_multiplex_client"
required-features = ["ipc", "client", "multiplex", "bincode"]

[[example]]
name = "ipc_multiplex_server"
required-features = ["ipc", "server", "multiplex", "bincode"]

[[example]]
name = "local"
required-features = ["local", "client", "server"]

[[example]]
name = "reconnect_client"
required-features = ["tcp", "client", "bincode"]

[[example]]
name = "request_loop"
required-features = ["local", "client", "server"]

[[example]]
name = "routing"
required-features = ["local", "client", "server", "router"]

[[example]]
name = "http_over_ipc"
required-features = ["ipc", "client", "server", "router", "bincode"]

[[example]]
name = "simple"
required-features = ["local", "client", "server"]

[[example]]
name = "stdio_client"
required-features = ["stdio", "client"]

[[example]]
name = "stdio_server"
required-features = ["stdio", "server"]

[[example]]
name = "tcp_client"
required-features = ["tcp", "client"]

[[example]]
name = "tcp_server"
required-features = ["tcp", "server"]

[[example]]
name = "tracing"
required-features = ["local", "client", "server"]

[[example]]
name = "http"
required-features = ["http", "tcp", "server", "serde-codec", "json"]

[[bench]]
harness = false
name = "rpc"
required-features = ["all"]
