[package]
edition = "2021"
name = "tower-rpc"
version = "0.1.0"

[dependencies]
hyper-util = { version = "0.1.3", features = [
    "tokio",
    "service",
    "server-auto",
], optional = true }
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "15db3730c47a7bd6221c65cbb68b2a9373ff41f0" }
bytes = "1"
futures = "0.3"
futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
matchit = { version = "0.8", optional = true }
parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "feb8297ed586862034faed03794d5d46519cd064", optional = true }
pin-project = "1"
serde = { version = "1", features = ["derive"], optional = true }
slab = { version = "0.4", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tokio-serde = { version = "0.9", optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tower = "0.7.0-rc4"
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.4", features = ["make", "util"] }
tracing = "0.1"
hyper = { version = "1.2", features = ["full"], optional = true }
http = { version = "1.1", optional = true }
http-body-util = { version = "0.1", optional = true }
eyre = "0.6"
transport-async = { git = "https://github.com/aschey/transport-async-rs", rev = "568202214362957fe495b6fc59103121b99ddbf5" }

[dev-dependencies]
background-service = { git = "https://github.com/aschey/background-service-rs", rev = "15db3730c47a7bd6221c65cbb68b2a9373ff41f0", features = [
    "signal",
] }
tower-http = { version = "0.5", features = ["trace"] }
http = "1.1"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
http-serde = { version = "2" }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "process",
    "net",
] }
tower = { version = "0.4.13", features = [
    "make",
    "util",
    "buffer",
    "steer",
    "reconnect",
] }
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"

[features]
all = [
    "bincode",
    "cbor",
    "client",
    "ipc",
    "json",
    "messagepack",
    "multiplex",
    "router",
    "codec",
    "server",
    "stdio",
    "tcp",
    "udp",
    "local",
    "http",
]
http = ["dep:http", "router", "http-body-util", "hyper", "hyper-util"]
bincode = ["transport-async/bincode"]
cbor = ["transport-async/cbor"]
client = []
default = []
ipc = ["transport-async/ipc"]
json = ["transport-async/json"]
local = ["transport-async/local"]
messagepack = ["transport-async/messagepack"]
multiplex = ["slab"]
router = ["matchit"]
codec = ["transport-async/codec"]
server = []
stdio = ["transport-async/stdio"]
tcp = ["transport-async/tcp"]
udp = ["transport-async/udp"]

[[example]]
name = "bytes_client"
required-features = ["ipc", "client"]

[[example]]
name = "bytes_server"
required-features = ["ipc", "server"]

[[example]]
name = "channel"
required-features = ["local", "client", "server"]

[[example]]
name = "ipc_client"
required-features = ["ipc", "client", "bincode"]

[[example]]
name = "ipc_server"
required-features = ["ipc", "server", "bincode"]

[[example]]
name = "ipc_multiplex_client"
required-features = ["ipc", "client", "multiplex", "bincode"]

[[example]]
name = "ipc_multiplex_server"
required-features = ["ipc", "server", "multiplex", "bincode"]

[[example]]
name = "local"
required-features = ["local", "client", "server"]

[[example]]
name = "reconnect_client"
required-features = ["tcp", "client", "bincode"]

[[example]]
name = "request_loop"
required-features = ["local", "client", "server"]

[[example]]
name = "routing"
required-features = ["local", "client", "server", "router"]

[[example]]
name = "http_over_ipc"
required-features = ["ipc", "client", "server", "router", "bincode"]

[[example]]
name = "simple"
required-features = ["local", "client", "server"]

[[example]]
name = "stdio_client"
required-features = ["stdio", "client"]

[[example]]
name = "stdio_server"
required-features = ["stdio", "server"]

[[example]]
name = "tcp_client"
required-features = ["tcp", "client"]

[[example]]
name = "tcp_server"
required-features = ["tcp", "server"]

[[example]]
name = "tracing"
required-features = ["local", "client", "server"]

[[example]]
name = "http"
required-features = ["http", "tcp", "server", "codec", "json"]

[[bench]]
harness = false
name = "rpc"
required-features = ["all"]
